# pysmartcocoon

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEBUG_FAN_CONNECTION.md  README.md  pyproject.toml  requirement.txt  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: constraints.txt  labeler.yml  pre-commit-autoupdate.yml  release-drafter.yml  tests.yaml
docs/: CONTRIBUTING.md  DEBUG_GUIDE.md  DEVCONTAINER_README.md  DOCS.md  README.md
pysmartcocoon/: __init__.py  __main__.py  api.py  client.py  const.py  errors.py  fan.py  fan_helpers.py  location.py  manager.py  room.py  session.py  thermostat.py  types.py
scripts/: README.md  run-github-actions.sh  run-local-checks.sh
tests/: __init__  debug_fan_connection.py  template.env  test_connection_monitor.py  test_extra_attributes.py  test_fan_control.py  test_integration.py  test_smoke_test.py  test_unit.py
