# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysmartcocoon"
version = "0.7.9"

description = "Library built for Home Assistant to integrate with the SmartCocoon"
readme = "README.md"
authors = [{ name = "Dave Pearce", email = "davepearce@live.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = ["smartcocoon", "fan"]

dependencies = [
    "aiohttp>=3.8",
    "async_timeout>=4.0",
    "paho.mqtt>=1.6",
    "requests>=2.28"
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "bumpversion",
    "pylint",
    "twine",
]
test = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/davecpearce/pysmartcocoon"

[tool.bumpver]
current_version = "0.7.9"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
